RESOLVED FIXED128583
[Mac] connection:willStopBufferingData: no longer exists in NSURLConnectionDelegate
https://bugs.webkit.org/show_bug.cgi?id=128583
Summary [Mac] connection:willStopBufferingData: no longer exists in NSURLConnectionDe...
Andy Estes
Reported 2014-02-10 23:26:33 PST
[Mac] connection:willStopBufferingData: no longer exists in NSURLConnectionDelegate
Attachments
[Mac] connection:willStopBufferingData: no longer exists in NSURLConnectionDelegate (10.86 KB, patch)
2014-02-10 23:32 PST, Andy Estes
andersca: review+
Andy Estes
Comment 1 2014-02-10 23:26:57 PST
Andy Estes
Comment 2 2014-02-10 23:32:24 PST
Created attachment 223816 [details] [Mac] connection:willStopBufferingData: no longer exists in NSURLConnectionDelegate
Andy Estes
Comment 3 2014-02-11 13:24:48 PST
Note You need to log in before you can comment on or make changes to this bug.