[Mac] connection:willStopBufferingData: no longer exists in NSURLConnectionDelegate https://bugs.webkit.org/show_bug.cgi?id=128583

Reviewed by Anders Carlsson.

The delegate method was removed in Snow Leopard.

Source/WebCore:

* loader/ResourceLoader.cpp:
* loader/ResourceLoader.h:
* platform/network/ResourceHandleClient.h:
* platform/network/mac/WebCoreResourceHandleAsDelegate.mm:
* platform/network/mac/WebCoreResourceHandleAsOperationQueueDelegate.mm:

Source/WebKit/mac:

* Misc/WebDownload.mm:

Source/WebKit2:

* NetworkProcess/NetworkResourceLoader.cpp:
* NetworkProcess/NetworkResourceLoader.h:

Canonical link: https://commits.webkit.org/146652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163905 268f45cc-cd09-0410-ab3c-d52691b4dbfc