Source/WebCore/loader/ResourceLoader.cpp
@@ -342,15 +342,6 @@ void ResourceLoader::didReceiveDataOrBuffer(const char* data, unsigned length, P
         frameLoader()->notifier().didReceiveData(this, buffer ? buffer->data() : data, buffer ? buffer->size() : length, static_cast<int>(encodedDataLength));
 }
 
-void ResourceLoader::willStopBufferingData(const char* data, unsigned length)
-{
-    if (m_options.dataBufferingPolicy == DoNotBufferData)
-        return;
-
-    ASSERT(!m_resourceData);
-    m_resourceData = ResourceBuffer::create(data, length);
-}
-
 void ResourceLoader::didFinishLoading(double finishTime)
 {
     didFinishLoadingOnePart(finishTime);
